--- a/djangoTemplates/hearapp/index.html
+++ b/djangoTemplates/hearapp/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
      <style type="text/css">
       html, body, #map_canvas {
         margin: 0;
@@ -29,6 +30,31 @@
         map: map,
         title: "hello world"
     });
+
+    jQuery.ajax({
+        url: '/ajax/venues',
+        success: function(data, status, xhr) {
+            mkr = {};
+            iwd = {};
+            jQuery.each(data.result, function(i, loc) {
+                mkr[i] = new google.maps.Marker({
+                    position: new google.maps.LatLng(loc.lat, loc.lon),
+                    map: map,
+                    title: loc.name
+                });
+                
+                iwd[i] = new google.maps.InfoWindow({
+                    content: loc.name
+                });
+
+                google.maps.event.addListener(mkr[i], 'click', function() {
+                    iwd[i].open(map, mkr[i]);
+                });
+
+            });
+        }
+    });
+
   }
   google.maps.event.addDomListener(window, 'load', initialize);
 
