concertView view now creates a widget (and displays the playlist) of the given songs. Not sure if the song-import actually works yet, because it hasn't been tried, but that's the next step!

--- a/djangoTemplates/hearapp/concertView.html
+++ b/djangoTemplates/hearapp/concertView.html
@@ -1,14 +1,60 @@
-<h1>Setlist for {{ concert_id.artist }} at {{ concert_id.venue }} on {{ concert_id.date }}</h1>
+<html>
+<head>
+<script type="text/javascript">
+function addSong(songlist, song_id){
+	if song_id == 0 {
+		return;
+	}
+	songlist+=",";
+	songlist+="song_id"
+	return songlist;
+}
+</script>
+</head>
+
+
+<body>
+<h1>Setlist </h1>
+
+<div id="widgetspace">
+</div>
 
 <div id='setlistList'>
 {% if concert_songs %}
+<!-- Create a thing that awioefjaopeifj -->
+	<script type="text/javascript">
+		gs_songlist="";
+	</script>
+
+<!-- Print the song list to show it exists -->
     <ul>
     {% for song in concert_songs %}
-    <!--  -->
     	<li><button onclick=""/>{{ song.name}} - {{ song.en_id }}</a></li>
+    	<script type="text/javascript">
+    		gs_songlist.concat({{ song.en_id }});
+    	</script>
     {% endfor %}
     </ul>
+ <!-- Insert Flash widget -->
+ 	<script type="text/javascript">
+		x="<object width='250' height='200'><param name='movie' value='http://grooveshark.com/widget.swf' /><param name='wmode' value='window' /><param name='allowScriptAccess' value='always' /><param name='flashvars' value='hostname=cowbell.grooveshark.com&songIDs=";
+		x.concat(gs_songlist);
+		x.concat("&bbg=FFFFFF&bth=FFFFFF&pfg=FFFFFF&lfg=FFFFFF&bt=D70860&pbg=D70860&pfgh=D70860&si=D70860&lbg=D70860&lfgh=D70860&sb=D70860&bfg=9A9A9A&pbgh=9A9A9A&lbgh=9A9A9A&sbh=9A9A9A&p=0' /><embed src='http://grooveshark.com/widget.swf'type='application/x-shockwave-flash' width='250' height='200'flashvars='hostname=cowbell.grooveshark.com&songIDs=");
+		x.concat(gs_songlist);
+		x.concat("&bbg=FFFFFF&bth=FFFFFF&pfg=FFFFFF&lfg=FFFFFF&bt=D70860&pbg=D70860&pfgh=D70860&si=D70860&lbg=D70860&lfgh=D70860&sb=D70860&bfg=9A9A9A&pbgh=9A9A9A&lbgh=9A9A9A&sbh=9A9A9A&p=0' allowScriptAccess='always' wmode='window' /></object>");
+		document.getElementById("widgetspace").innerHTML=x;
+	</script>
+
+
 {% else %}
-    <p>No setlist is available for this concert.</p>
+    <p>Sorry, no set list is available for this concert!</p>
+ <!-- Insert Flash widget filler -->
+	<script type="text/javascript">
+		x="<object width='250' height='200'><param name='movie' value='http://grooveshark.com/widget.swf' /><param name='wmode' value='window' /><param name='allowScriptAccess' value='always' /><param name='flashvars' value='hostname=cowbell.grooveshark.com&songIDs=24788067&bbg=FFFFFF&bth=FFFFFF&pfg=FFFFFF&lfg=FFFFFF&bt=D70860&pbg=D70860&pfgh=D70860&si=D70860&lbg=D70860&lfgh=D70860&sb=D70860&bfg=9A9A9A&pbgh=9A9A9A&lbgh=9A9A9A&sbh=9A9A9A&p=0' /><embed src='http://grooveshark.com/widget.swf' type='application/x-shockwave-flash' width='250' height='200' flashvars='hostname=cowbell.grooveshark.com&songIDs=24788067&bbg=FFFFFF&bth=FFFFFF&pfg=FFFFFF&lfg=FFFFFF&bt=D70860&pbg=D70860&pfgh=D70860&si=D70860&lbg=D70860&lfgh=D70860&sb=D70860&bfg=9A9A9A&pbgh=9A9A9A&lbgh=9A9A9A&sbh=9A9A9A&p=0' allowScriptAccess='always' wmode='window' /></object>";
+		document.getElementById("widgetspace").innerHTML=x;
+	</script>
 {% endif %}
 </div>
+
+</body>
+</html>
