link venue name to concerts

--- a/djangoTemplates/hearapp/index.html
+++ b/djangoTemplates/hearapp/index.html
@@ -34,9 +34,11 @@
     jQuery.ajax({
         url: '/ajax/venues',
         success: function(data, status, xhr) {
+            console.log(data);
             mkr = {};
             iwd = {};
             jQuery.each(data.result, function(i, loc) {
+                console.log(i);
                 mkr[i] = new google.maps.Marker({
                     position: new google.maps.LatLng(loc.lat, loc.lon),
                     map: map,
@@ -44,7 +46,7 @@
                 });
                 
                 iwd[i] = new google.maps.InfoWindow({
-                    content: loc.name
+                    content: '<a href="/getConcerts/' + loc.vid + '">' + loc.name + '</a>'
                 });
 
                 google.maps.event.addListener(mkr[i], 'click', function() {
