--- a/djangoTemplates/hearapp/index.html
+++ b/djangoTemplates/hearapp/index.html
@@ -6,7 +6,7 @@
       html, body, #map_canvas {
         margin: 0;
         padding: 0;
-        height: 500px;
+        height: 100%;
       }
       </style>
     <script type="text/javascript"
@@ -64,19 +64,5 @@
 </head>
 <body>
     <div id="map_canvas"></div>
-<h1>Venues</h1>
-
-<div id='venueList'>
-{% if full_venue_list %}
-    <ul>
-    {% for venue in full_venue_list %}
-        <li><a href="/getConcerts/{{ venue.lfm_venue_id }}"/>{{ venue.name }}: {{ venue.lat }}, {{ venue.lon }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No venues are available.</p>
-{% endif %}
-
-</div>
 </body>
 </html>
